# feat - create expiration and redis service k8s deployment

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -36,6 +36,10 @@ build:
       context: orders
       docker:
         dockerfile: Dockerfile
+    - image: taher1201/expiration
+      context: expiration
+      docker:
+        dockerfile: Dockerfile
       sync:
         manual:
           - src: 'src/**/*.ts'
